src/test/resources/org/xmlcml/www/cmlcomp/invalid/one-job-final-init-cal.cml
<?xml version="1.0" encoding="UTF-8"?>
<cml
    convention="conventions:cmlcomp"
    cmlx:note="A cmlcomp containing wrong order of init, calculation, final is invalid."
    xmlns="http://www.xml-cml.org/schema"
    xmlns:conventions="http://www.xml-cml.org/convention/"
    xmlns:cmlx="http://www.xml-cml.org/schema/cmlx">

    <module role="joblist">
        <module role="job" title="job1">
            <module role="final">
                <molecule formalCharge="0" spinMultiplicity="1">
                    <atomArray>
                        <atom id="a1" elementType="C" x3="-1.661722" y3="-1.150648" z3="-0.057744"/>
                    </atomArray>
                </molecule>
                <propertyList>
                </propertyList>
            </module>
            <module role="calculation">
                <parameterList>
                </parameterList>
                <molecule formalCharge="0" spinMultiplicity="1">
                    <atomArray>
                        <atom id="a1" elementType="C" x3="-1.6629" y3="-1.148" z3="-0.0578"/>
                    </atomArray>
                </molecule>
            </module>
            <module role="init">
                <parameterList>
                </parameterList>
                <molecule formalCharge="0" spinMultiplicity="1">
                    <atomArray>
                        <atom id="a1" elementType="C" x3="-1.6629" y3="-1.148" z3="-0.0578"/>
                    </atomArray>
                </molecule>
            </module>
        </module>
    </module>
</cml>